Fix: corrección de traducciones y actualización de experiencia

--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
                 "click-detail": "Haz clic para ver detalles e imágenes →",
                 "skills-title": "Stack Técnico",
                 "modal-empty-desc": "Desarrollo de funcionalidades móviles con React Native, asegurando compatibilidad multiplataforma y mejoras de UI/UX para producción.",
+                "modal-padel-desc": "Lógica compleja para torneos, gestión de usuarios y visualización de resultados en tiempo real.",
+                "modal-empty-subtitle": "Detalles del Desarrollo",
+                "modal-empty-full-desc": "Participé en el desarrollo de esta aplicación de reserva de vuelos privados utilizando React Native. Como se observa en las capturas, implementé la lógica de filtrado por tipo de vuelo (Empty Leg, Compartido, Entero), la integración de mapas para selección de aeropuertos y el sistema de gestión de favoritos.",
                 "modal-padel-desc": "Lógica compleja para torneos, gestión de usuarios y visualización de resultados en tiempo real."
             },
             en: {
@@ -238,6 +241,9 @@
                 "click-detail": "Click to see details and images →",
                 "skills-title": "Tech Stack",
                 "modal-empty-desc": "Developed mobile features using React Native, ensuring cross-platform compatibility and UI/UX improvements for production.",
+                "modal-padel-desc": "Complex tournament logic, user management, and real-time result visualization.",
+                "modal-empty-subtitle": "Development Details",
+                "modal-empty-full-desc": "I participated in the development of this private flight booking application using React Native. As seen in the screenshots, I implemented filtering logic by flight type (Empty Leg, Shared, Full), map integration for airport selection, and the favorites management system.",
                 "modal-padel-desc": "Complex tournament logic, user management, and real-time result visualization."
             }
         };
