Fix: corrección de traducciones y actualización de experiencia

--- a/index.html
+++ b/index.html
@@ -199,6 +199,12 @@
                     <span class="skill-badge">Java</span>
                     <span class="skill-badge">Python</span>
                     <span class="skill-badge">SQL Server</span>
+                    <span class="skill-badge">Django</span>
+                    <span class="skill-badge">Git</span>
+                    <span class="skill-badge">GitHub</span>
+                    <span class="skill-badge">Bootstrap</span>
+                    <span class="skill-badge">HTML</span>
+                    <span class="skill-badge">CSS</span>
                 </div>
             </div>
         </section>
