--- a/index.html
+++ b/index.html
@@ -77,6 +77,31 @@
                 </div>
             </div>
         </header>
+
+        <section id="sobre-mi" class="py-5">
+            <div class="container py-4">
+                <div class="row align-items-center g-5">
+                    <div class="col-lg-6">
+                        <h2 class="fw-bold mb-4" data-i18n="about-title">Sobre mí</h2>
+                        <p class="lead text-primary fw-600" data-i18n="about-subtitle">Desarrollador orientado a resultados con base en Mar del Plata.</p>
+                        <p class="text-body-secondary" data-i18n="about-text-1">
+                            Soy Técnico Superior en Desarrollo de Software. Mi enfoque combina la creación de aplicaciones móviles y web con una sólida base técnica en soporte IT y resolución de incidentes[cite: 4, 10, 24].
+                        </p>
+                        <p class="text-body-secondary" data-i18n="about-text-2">
+                            Cuento con experiencia entregando soluciones en entornos ágiles (Scrum/Kanban) [cite: 5, 26], siempre priorizando la calidad del código y la compatibilidad multiplataforma[cite: 14, 24]. Me apasiona enfrentar desafíos técnicos que requieran pensamiento analítico y soluciones orientadas al negocio[cite: 6].
+                        </p>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="p-4 bg-body-secondary rounded-4 shadow-sm border text-center">
+                            <i class="bi bi-code-square display-1 text-primary mb-3"></i>
+                            <h5 class="fw-bold" data-i18n="about-focus">Enfoque Principal</h5>
+                            <p class="small text-muted" data-i18n="about-focus-desc">Desarrollo Multiplataforma (iOS/Android), QA Testing y Soporte Técnico especializado[cite: 5, 24].</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
         <section id="experiencia" class="py-5">
             <div class="container py-4">
                 <h2 class="fw-bold mb-5" data-i18n="nav-exp">Experiencia Profesional</h2>
@@ -237,6 +262,12 @@
                 "modal-empty-subtitle": "Detalles del Desarrollo",
                 "modal-empty-full-desc": "Participé en el desarrollo de esta aplicación de reserva de vuelos privados utilizando React Native. Como se observa en las capturas, implementé la lógica de filtrado por tipo de vuelo (Empty Leg, Compartido, Entero), la integración de mapas para selección de aeropuertos y el sistema de gestión de favoritos.",
                 "modal-padel-desc": "Lógica compleja para torneos, gestión de usuarios y visualización de resultados en tiempo real."
+                "about-title": "Sobre mí",
+                "about-subtitle": "Desarrollador orientado a resultados con base en Mar del Plata.",
+                "about-text-1": "Soy Técnico Superior en Desarrollo de Software egresado del IDRA. Mi enfoque combina la creación de aplicaciones móviles y web con una sólida base técnica en soporte IT y resolución de incidentes.",
+                "about-text-2": "Cuento con experiencia entregando soluciones en entornos ágiles, siempre priorizando la calidad del código y la compatibilidad multiplataforma.",
+                "about-focus": "Enfoque Principal",
+                "about-focus-desc": "Desarrollo Multiplataforma, QA Testing y Soporte Técnico especializado.",
             },
             en: {
                 "nav-home": "Home", "nav-exp": "Experience", "nav-skills": "Skills",
@@ -251,6 +282,12 @@
                 "modal-empty-subtitle": "Development Details",
                 "modal-empty-full-desc": "I participated in the development of this private flight booking application using React Native. As seen in the screenshots, I implemented filtering logic by flight type (Empty Leg, Shared, Full), map integration for airport selection, and the favorites management system.",
                 "modal-padel-desc": "Complex tournament logic, user management, and real-time result visualization."
+                "about-title": "About Me",
+                "about-subtitle": "Results-driven Software Developer based in Mar del Plata.",
+                "about-text-1": "I hold a Higher Technical Degree in Software Development from IDRA. My approach combines mobile and web development with a strong technical background in IT support and incident management.",
+                "about-text-2": "I have experience delivering solutions in Agile environments, always prioritizing code quality and cross-platform compatibility.",
+                "about-focus": "Core Focus",
+                "about-focus-desc": "Cross-Platform Development, QA Testing, and Specialized IT Support.",
             }
         };
 
