--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
                         <h2 class="fw-bold mb-4" data-i18n="about-title">Sobre mí</h2>
                         <p class="lead text-primary fw-600" data-i18n="about-subtitle">Desarrollador orientado a resultados con base en Mar del Plata.</p>
                         <p class="text-body-secondary" data-i18n="about-text-1">
-                            Soy Técnico Superior en Desarrollo de Software. Mi enfoque combina la creación de aplicaciones móviles y web con una sólida base técnica en soporte IT y resolución de incidentes[cite: 4, 10, 24].
+                            Soy Técnico Superior en Desarrollo de Software. Mi enfoque combina la creación de aplicaciones móviles y web con una sólida base técnica en soporte IT y resolución de incidentes.
                         </p>
                         <p class="text-body-secondary" data-i18n="about-text-2">
-                            Cuento con experiencia entregando soluciones en entornos ágiles (Scrum/Kanban) [cite: 5, 26], siempre priorizando la calidad del código y la compatibilidad multiplataforma[cite: 14, 24]. Me apasiona enfrentar desafíos técnicos que requieran pensamiento analítico y soluciones orientadas al negocio[cite: 6].
+                            Cuento con experiencia entregando soluciones en entornos ágiles (Scrum/Kanban), siempre priorizando la calidad del código y la compatibilidad multiplataforma[cite: 14, 24]. Me apasiona enfrentar desafíos técnicos que requieran pensamiento analítico y soluciones orientadas al negocio[cite: 6].
                         </p>
                     </div>
                     <div class="col-lg-6">
                         <div class="p-4 bg-body-secondary rounded-4 shadow-sm border text-center">
                             <i class="bi bi-code-square display-1 text-primary mb-3"></i>
                             <h5 class="fw-bold" data-i18n="about-focus">Enfoque Principal</h5>
-                            <p class="small text-muted" data-i18n="about-focus-desc">Desarrollo Multiplataforma (iOS/Android), QA Testing y Soporte Técnico especializado[cite: 5, 24].</p>
+                            <p class="small text-muted" data-i18n="about-focus-desc">Desarrollo Multiplataforma (iOS/Android), QA Testing y Soporte Técnico especializado.</p>
                         </div>
                     </div>
                 </div>
@@ -313,3 +313,4 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
+
