--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             Soy Técnico Superior en Desarrollo de Software. Mi enfoque combina la creación de aplicaciones móviles y web con una sólida base técnica en soporte IT y resolución de incidentes.
                         </p>
                         <p class="text-body-secondary" data-i18n="about-text-2">
-                            Cuento con experiencia entregando soluciones en entornos ágiles (Scrum/Kanban), siempre priorizando la calidad del código y la compatibilidad multiplataforma. Me apasiona enfrentar desafíos técnicos que requieran pensamiento analítico y soluciones orientadas al negocio[cite: 6].
+                            Cuento con experiencia entregando soluciones en entornos ágiles (Scrum/Kanban), siempre priorizando la calidad del código y la compatibilidad multiplataforma. Me apasiona enfrentar desafíos técnicos que requieran pensamiento analítico y soluciones orientadas al negocio.
                         </p>
                     </div>
                     <div class="col-lg-6">
@@ -313,5 +313,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
+
 
 
