--- a/index.html
+++ b/index.html
@@ -23,6 +23,26 @@
         }
         .nav-link { cursor: pointer; }
         .navbar { backdrop-filter: blur(10px); }
+        
+        /* Lightbox Close Button */
+        .lightbox-close {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 1060;
+            background: rgba(0, 0, 0, 0.5);
+            border-radius: 50%;
+            padding: 10px;
+            width: 40px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background 0.2s;
+            border: none;
+        }
+        .lightbox-close:hover { background: rgba(0, 0, 0, 0.8); }
+        .lightbox-close .btn-close { filter: invert(1); opacity: 1; }
     </style>
 </head>
 <body data-bs-theme="light">
@@ -194,10 +214,12 @@
     
     <!-- Lightbox Modal -->
     <div class="modal fade" id="lightboxModal" tabindex="-1" aria-hidden="true">
+        <button type="button" class="lightbox-close" data-bs-dismiss="modal" aria-label="Close">
+            <span class="btn-close"></span>
+        </button>
         <div class="modal-dialog modal-xl modal-dialog-centered">
             <div class="modal-content bg-transparent border-0">
-                <div class="modal-body p-0 position-relative text-center">
-                    <button type="button" class="btn-close btn-close-white position-absolute top-0 end-0 m-3" data-bs-dismiss="modal" aria-label="Close" style="z-index: 1056; background-color: white; opacity: 0.8;"></button>
+                <div class="modal-body p-0 text-center">
                     <img id="lightboxImage" src="" class="img-fluid rounded shadow-lg" alt="Full view" style="max-height: 90vh;">
                 </div>
             </div>
