--- a/index.html
+++ b/index.html
@@ -239,11 +239,10 @@
                 <div class="col-lg-7" data-aos="fade-up" data-aos-duration="1000">
                     <h5 class="text-primary fw-bold mb-3" data-i18n="hero-tag">Disponible para desafíos</h5>
                     <h1 class="display-3 fw-bold mb-4"><span class="text-gradient">Emanuel G. Bolig</span></h1>
-                    <p class="lead text-body-secondary mb-5"><span id="hero-typewriter" class="text-primary fw-semibold"></span> con base en Mar del Plata.</p>
-                    <div class="d-flex justify-content-center justify-content-lg-start gap-3" data-aos="fade-up" data-aos-delay="200">
+                    <p class="lead text-body-secondary mb-5"><span id="hero-typewriter" class="text-primary fw-semibold"></span> <span data-i18n="hero-location">con base en Mar del Plata.</span></p>
+                    <div class="d-flex flex-column flex-lg-row justify-content-center justify-content-lg-start gap-3" data-aos="fade-up" data-aos-delay="200">
                         <a href="mailto:egomezbolig@gmail.com" class="btn btn-primary btn-lg px-4" data-i18n="btn-contact">Hablemos</a>
                         <a href="cv_emanuel_bolig_en.pdf" target="_blank" class="btn btn-outline-primary btn-lg px-4" data-i18n="btn-cv"><i class="bi bi-file-earmark-person me-2"></i>Descargar CV</a>
-                        <a href="https://github.com/EmanuelGBolig" target="_blank" class="btn btn-outline-body btn-lg px-4">GitHub</a>
                     </div>
                 </div>
             </div>
@@ -482,7 +481,7 @@
         const translations = {
             es: {
                 "nav-home": "Inicio", "nav-exp": "Experiencia", "nav-skills": "Stack Tecnológico", "nav-cv": "CV",
-                "hero-tag": "Disponible para desafíos", "hero-desc": "Software Developer con base en Mar del Plata.",
+                "hero-tag": "Disponible para desafíos", "hero-location": "con base en Mar del Plata.",
                 "btn-contact": "Contacto", "btn-cv": "Descargar CV", "padel-title": "Sistema de Paddle",
                 "click-detail": "Ver detalles e imágenes →", "about-title": "Sobre mí",
                 "about-subtitle": "Técnico Superior en Desarrollo de Software.",
@@ -498,7 +497,7 @@
             },
             en: {
                 "nav-home": "Home", "nav-exp": "Experience", "nav-skills": "Skills", "nav-cv": "CV",
-                "hero-tag": "Available for challenges", "hero-desc": "Software Developer with base in Mar del Plata.",
+                "hero-tag": "Available for challenges", "hero-location": "based in Mar del Plata.",
                 "btn-contact": "Contact", "btn-cv": "Download CV", "padel-title": "Padel System",
                 "click-detail": "See details and images →", "about-title": "About Me",
                 "about-subtitle": "Software Development Technician.",
