--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <div class="container text-center text-lg-start">
             <div class="row align-items-center">
                 <div class="col-lg-7" data-aos="fade-up" data-aos-duration="1000">
-                    <h5 class="text-primary fw-bold mb-3" data-i18n="hero-tag">Disponible para desafíos</h5>
+                    <h5 class="text-primary fw-bold mb-3" data-i18n="hero-tag">Disponible para nuevos desafíos</h5>
                     <h1 class="display-3 fw-bold mb-4"><span class="text-gradient">Emanuel G. Bolig</span></h1>
                     <p class="lead text-body-secondary mb-5"><span id="hero-typewriter" class="text-primary fw-semibold"></span></p>
                     <div class="d-flex flex-column flex-lg-row justify-content-center justify-content-lg-start gap-3" data-aos="fade-up" data-aos-delay="200">
@@ -519,7 +519,7 @@
         const translations = {
             es: {
                 "nav-home": "Inicio", "nav-exp": "Experiencia", "nav-skills": "Stack Tecnológico", "nav-cv": "CV",
-                "hero-tag": "Disponible para desafíos",
+                "hero-tag": "Disponible para nuevos desafíos",
                 "btn-contact": "Contacto", "btn-cv": "Descargar CV", "padel-title": "Sistema de Paddle",
                 "loader-text": "CARGANDO...",
                 "click-detail": "Ver detalles e imágenes →", "about-title": "Sobre mí",
@@ -536,7 +536,7 @@
             },
             en: {
                 "nav-home": "Home", "nav-exp": "Experience", "nav-skills": "Skills", "nav-cv": "CV",
-                "hero-tag": "Available for challenges",
+                "hero-tag": "Available for new challenges",
                 "btn-contact": "Contact", "btn-cv": "Download CV", "padel-title": "Padel System",
                 "loader-text": "LOADING...",
                 "click-detail": "See details and images →", "about-title": "About Me",
