--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         /* Skill Specific Colors */
         .skill-badge[data-color="react"] { --brand-color: #61DAFB; color: #000; } 
         .skill-badge[data-color="js"] { --brand-color: #F7DF1E; color: #000; }
+        .skill-badge[data-color="ts"] { --brand-color: #3178C6; color: white; }
         .skill-badge[data-color="csharp"] { --brand-color: #512BD4; color: white; }
         .skill-badge[data-color="java"] { --brand-color: #007396; color: white; }
         .skill-badge[data-color="python"] { --brand-color: #3776AB; color: white; }
@@ -393,7 +394,7 @@
                     <h6 class="fw-bold text-primary mt-3" data-i18n="modal-tech">Tecnologías Utilizadas</h6>
                     <div class="d-flex flex-wrap gap-2">
                         <a href="https://reactnative.dev/" target="_blank" class="badge bg-body-secondary text-body border text-decoration-none">React Native</a>
-                        <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" class="badge bg-body-secondary text-body border text-decoration-none">JavaScript</a>
+                        <a href="https://www.typescriptlang.org/" target="_blank" class="badge bg-body-secondary text-body border text-decoration-none">TypeScript</a>
                     </div>
                 </div>
             </div>
@@ -479,6 +480,7 @@
             <div class="d-flex flex-wrap justify-content-center gap-2" data-aos="zoom-in">
                 <a href="https://reactnative.dev/" target="_blank" class="skill-badge" data-color="react">React Native</a>
                 <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" class="skill-badge" data-color="js">JavaScript</a>
+                <a href="https://www.typescriptlang.org/" target="_blank" class="skill-badge" data-color="ts">TypeScript</a>
                 <a href="https://www.python.org/" target="_blank" class="skill-badge" data-color="python">Python</a>
                 <a href="https://www.microsoft.com/en-us/sql-server" target="_blank" class="skill-badge" data-color="sql">SQL Server</a>
                 <a href="https://www.djangoproject.com/" target="_blank" class="skill-badge" data-color="django">Django</a>
