--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                         <div class="col-4"><img src="emptyfly1.jpeg" class="img-preview" alt="3" onclick="openLightbox(this)"></div>
                     </div>
                     <h6 class="fw-bold text-primary" data-i18n="modal-empty-subtitle">Detalles del Proyecto</h6>
-                    <p class="small text-body-secondary" data-i18n="modal-empty-full-desc">Participé en el desarrollo de esta aplicación de reserva de vuelos privados utilizando React Native. Implementé la lógica de filtrado por tipo de vuelo e integración de favoritos, ademas de correcion de bugs, problemas de rendimiento y compatibilidad con diferentes dispositivos.</p>
+                    <p class="small text-body-secondary" data-i18n="modal-empty-full-desc">Participé en el desarrollo de esta aplicación de reserva de vuelos privados utilizando React Native. Implementé la lógica de filtrado por tipo de vuelo e integración de favoritos, ademas de correcion de bugs, problemas de rendimiento y compatibilidad con diferentes dispositivos. <br> Enlace: <a href="https://play.google.com/store/apps/details?id=com.emptyfly" target="_blank">https://play.google.com/store/apps/details?id=com.emptyfly</a></p>
                 
                     <h6 class="fw-bold text-primary mt-3" data-i18n="modal-tech">Tecnologías Utilizadas</h6>
                     <div class="d-flex flex-wrap gap-2">
