--- a/index.html
+++ b/index.html
@@ -231,11 +231,13 @@
             100% { transform: rotate(360deg); }
         }
         .loader-text {
-            margin-top: 20px;
+            display: block;
+            margin: 20px auto 0 auto;
             color: #fff;
             font-size: 18px;
             font-weight: 600;
             letter-spacing: 2px;
+            text-align: center;
         }
 
         /* Footer Dark Mode Styling */
