Update TodoPadel text and links

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                                 <i class="bi bi-laptop fs-4"></i>
                             </div>
                             <div>
-                                <h4 class="fw-bold mb-0" data-i18n="padel-title">Padel Web App</h4>
+                                <h4 class="fw-bold mb-0" data-i18n="padel-title">TodoPadel</h4>
                                 <small class="text-primary fw-semibold">Full-Stack Developer</small>
                             </div>
                         </div>
@@ -435,7 +435,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header border-0">
-                    <h5 class="modal-title fw-bold" data-i18n="padel-title">Padel Web App</h5>
+                    <h5 class="modal-title fw-bold" data-i18n="padel-title">TodoPadel</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -465,7 +465,8 @@
                         <div class="col-4"><img src="padelapp3.png" class="img-preview" alt="3" onclick="openLightbox(this)"></div>
                     </div>
                     <h6 class="fw-bold text-primary" data-i18n="modal-padel-subtitle">Detalles del Proyecto</h6>
-                    <p class="small text-body-secondary" data-i18n="modal-padel-desc">Desarrollo general de la aplicacion web 100% responsiva, creacion de cuentas, implementacion de algoritmos para generación de llaves (brackets), actualización de resultados en vivo y base de datos para ranking.</p>
+                    <p class="small text-body-secondary" data-i18n="modal-padel-desc">TodoPadel (2026) — Plataforma integral de gestión de torneos de Pádel. Desarrollé una aplicación Full-Stack responsiva enfocada en la experiencia del usuario (clubes y jugadores). Implementé el backend en Python con Django, garantizando la seguridad transaccional y algoritmos matemáticos en la generación de cuadros eliminatorios y byes. Para lograr una UI ágil y moderna, utilicé HTMX junto a Tailwind CSS y DaisyUI, consiguiendo transiciones instantáneas sin el peso de frameworks pesados de JS. La plataforma gestiona la persistencia de imágenes a través de Cloudinary y notificaciones vía Resend API, estando 100% desplegada en un entorno de la nube de Render.</p>
+                    <a href="https://todopadel.club" target="_blank" class="btn btn-outline-primary btn-sm mb-3">Visitar Sitio Web <i class="bi bi-box-arrow-up-right ms-1"></i></a>
                 
                     <h6 class="fw-bold text-primary mt-3" data-i18n="modal-tech">Tecnologías Utilizadas</h6>
                     <div class="d-flex flex-wrap gap-2">
@@ -574,7 +575,7 @@
             es: {
                 "nav-home": "Inicio", "nav-exp": "Experiencia", "nav-skills": "Stack Tecnológico", "nav-cv": "CV",
                 "hero-tag": "Disponible para nuevos desafíos",
-                "btn-contact": "Contacto", "btn-cv": "Descargar CV", "padel-title": "Sistema de Paddle",
+                "btn-contact": "Contacto", "btn-cv": "Descargar CV", "padel-title": "TodoPadel",
                 "loader-text": "CARGANDO...",
                 "click-detail": "Ver detalles e imágenes →", "about-title": "Sobre mí",
                 "about-subtitle": "Técnico Superior en Desarrollo de Software.",
@@ -583,7 +584,7 @@
                 "modal-empty-subtitle": "Detalles del Proyecto",
                 "modal-empty-full-desc": "Participé en el desarrollo de esta aplicación de reserva de vuelos privados utilizando React Native. Implementé la lógica de filtrado por tipo de vuelo e integración de favoritos, ademas de correcion de bugs, problemas de rendimiento y compatibilidad con diferentes dispositivos.",
                 "modal-padel-subtitle": "Detalles del Proyecto",
-                "modal-padel-desc": "Desarrollo general de la aplicacion web 100% responsiva, creacion de cuentas, implementacion de algoritmos para generación de llaves (brackets), actualización de resultados en vivo y base de datos para ranking.",
+                "modal-padel-desc": "TodoPadel (2026) — Plataforma integral de gestión de torneos de Pádel. Desarrollé una aplicación Full-Stack responsiva enfocada en la experiencia del usuario (clubes y jugadores). Implementé el backend en Python con Django, garantizando la seguridad transaccional y algoritmos matemáticos en la generación de cuadros eliminatorios y byes. Para lograr una UI ágil y moderna, utilicé HTMX junto a Tailwind CSS y DaisyUI, consiguiendo transiciones instantáneas sin el peso de frameworks pesados de JS. La plataforma gestiona la persistencia de imágenes a través de Cloudinary y notificaciones vía Resend API, estando 100% desplegada en un entorno de la nube de Render.",
                 "about-focus": "Enfoque Principal",
                 "about-focus-desc": "Desarrollo Multiplataforma (iOS/Android), desarrollo de Paginas Web, QA Testing y Soporte Técnico especializado.",
                 "modal-tech": "Tecnologías Utilizadas"
@@ -591,7 +592,7 @@
             en: {
                 "nav-home": "Home", "nav-exp": "Experience", "nav-skills": "Skills", "nav-cv": "CV",
                 "hero-tag": "Available for new challenges",
-                "btn-contact": "Contact", "btn-cv": "Download CV", "padel-title": "Padel System",
+                "btn-contact": "Contact", "btn-cv": "Download CV", "padel-title": "TodoPadel",
                 "loader-text": "LOADING...",
                 "click-detail": "See details and images →", "about-title": "About Me",
                 "about-subtitle": "Software Development Technician.",
@@ -600,7 +601,7 @@
                 "modal-empty-subtitle": "Project Details",
                 "modal-empty-full-desc": "Implementation of flight filters and favorites management with React Native, plus bug fixing, performance improvements and device compatibility.",
                 "modal-padel-subtitle": "Project Details",
-                "modal-padel-desc": "Full responsive web app development, account creation, bracket generation algorithms, live results updates and ranking database.",
+                "modal-padel-desc": "TodoPadel (2026) — Comprehensive Padel tournament management platform. Developed a responsive Full-Stack application focused on user experience (clubs and players). Implemented the backend in Python with Django, ensuring transactional security and mathematical algorithms in the generation of knockout brackets and byes. To achieve an agile and modern UI, I used HTMX along with Tailwind CSS and DaisyUI, achieving instant transitions without the weight of heavy JS frameworks. The platform manages image persistence through Cloudinary and notifications via Resend API, being 100% deployed in a Render cloud environment.",
                 "about-focus": "Main Focus",
                 "about-focus-desc": "Cross-platform Development (iOS/Android), Web Apps Development, QA Testing and Specialized Technical Support.",
                 "modal-tech": "Technologies Used"
